--- a/app/src/main/res/layouts/navbar/home_menu/layout/form_pengajuan_screen.xml
+++ b/app/src/main/res/layouts/navbar/home_menu/layout/form_pengajuan_screen.xml
@@ -77,6 +77,14 @@
                     android:textSize="12sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/errJudulTaSebelumnya"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/text_regular_red"
+                android:text="*Harap isi kolom teks yang kosong"
+                />
 
             <com.google.android.material.textview.MaterialTextView
                 android:layout_marginTop="15dp"
@@ -108,6 +116,14 @@
                     android:textSize="12sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/errJudulTaBaru"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/text_regular_red"
+                android:text="*Harap isi kolom teks yang kosong"
+                />
 
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="match_parent"
@@ -153,6 +169,14 @@
                     android:textSize="12sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/errAlasanPerubahanJudul"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/text_regular_red"
+                android:text="*Harap isi kolom teks yang kosong"
+                />
 
             <com.google.android.material.button.MaterialButton
                 style="@style/Widget.MaterialComponents.Button"
