--- a/app/src/main/res/layouts/navbar/home_menu/layout/monitoring_screen.xml
+++ b/app/src/main/res/layouts/navbar/home_menu/layout/monitoring_screen.xml
@@ -106,7 +106,16 @@
                     app:labelBehavior="gone"
                     app:thumbColor="@color/transparent_thumb"
                     app:trackColorInactive="@color/slide_inactive_color" />
-
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginRight="12dp"
+                    android:id="@+id/errProgressbar"
+                    android:visibility="gone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/text_regular_red"
+                    android:text="*Harap isi kolom teks yang kosong"
+                    />
 
 
                 <LinearLayout
@@ -128,6 +137,7 @@
                         android:id="@+id/InputLayout_deskripsi_monitoring"
                         android:layout_width="match_parent"
                         android:layout_height="129dp"
+                        android:layout_marginBottom="15dp"
                         android:background="@drawable/text_field_round_border"
                         app:boxBackgroundMode="none"
                         app:hintEnabled="false">
@@ -148,13 +158,21 @@
                             android:textColorHint="@color/font_secondary_variant"
                             android:textSize="12sp" />
                     </com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/errDeskripsiMonitoring"
+                        android:visibility="gone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="@style/text_regular_red"
+                        android:text="*Harap isi kolom teks yang kosong"
+                        />
 
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/btn_kirim_monitoring"
                         style="@style/Widget.MaterialComponents.Button"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
+
                         android:layout_marginBottom="20dp"
                         android:backgroundTint="@color/primary_color"
                         android:padding="15dp"
